# KrylovAPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: AbstractOperator.f90  AbstractVector.f90  ExampleOperators.f90  KrylovSolver.f90  Precision.f90  SimpleVectors.f90  TransposableOperator.f90
src_abs_vect/: AbstractOperators.f90  DVectors.f90  ExampleOperators.f90  IdentityOperators.f90  KrylovSolver.f90
test/: main.f90  main_dvector.f90
